--- a/project/web/html/header.html
+++ b/project/web/html/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <p>
-        this is a head
-    </p>
+    <iframe src="./html/footer.html"></iframe>
     <img src="./pictures/1552792416294.jpg">
+    <form type="text" id="xxx"></form>
+    <button action="login.php"> 提交</button>
 </html>
