--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -8,6 +8,7 @@
 {%block name="title"%}<title>用户注册界面</title>{%/block%}
     
 {%block name="javascript"%}
+    <script type="text/javascript" src="../jquery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
         //窗体改变大小时触发事件
         window.onresize = setViewSize;
@@ -85,6 +86,20 @@
             return true;
         }
 
+        var username = document.getElementById("userid").value;
+        $(document).ready(function() {
+            $("#userid").change(function() {
+                $(this).css("background-color","#FFFFCC");
+                alert("hi");
+                console.log(username);
+                $.get("./test.php", {user: username}, function(msg) {
+                    console.log("msg = " + msg);
+                    alert("msg: " + msg);
+                });
+
+            });
+        });
+
     </script>
 {%/block%}
 
@@ -97,7 +112,7 @@
                 <th colspan="2" align="center">用户注册</th>
             </tr>
             <tr>
-                <td>用户名&nbsp;<input type="text" style="width: 200px;height: 30px;"  name="username" id="username"></td>
+                <td>用户名&nbsp;<input id="userid" type="text" style="width: 200px;height: 30px;"  name="username"></td>
             </tr>
             <tr>
                 <td>密  码&nbsp;<input type="password"  style="width: 200px;height: 30px;"  name="password"></td>
