--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -1,7 +1,7 @@
 
 {%extends file="./tpl/layout.html"%} 
 {%block name="css"%}
-    <link href="../css/form.css" rel="stylesheet" type="text/css" />
+    <link href="../css/login.css" rel="stylesheet" type="text/css" />
     <link href="../css/link.css" rel="stylesheet" type="text/css" />
 {%/block%}
     
@@ -10,6 +10,7 @@
 {%block name="javascript"%}
     <script type="text/javascript" src="../jquery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
+        /**
         //窗体改变大小时触发事件
         window.onresize = setViewSize;
         var marginLeft=0;
@@ -44,7 +45,7 @@
             }
             return;
         }
-    
+        **/
         //检查用户输入
         function checkRegister(){
             if(checkUsername() && checkPassword()){
@@ -54,7 +55,8 @@
         }
         //检查登录用户名
         function checkUsername(){
-            var username = document.registerForm.username;
+            return true;
+            var username = document.getElementById("userid");
             if(username.value.length!=0){
                 return true;
             }else{
@@ -64,21 +66,12 @@
         }
         //检查登录密码
         function checkPassword(){
-            var password = document.registerForm.password;
-            var passwdcf = document.registerForm.passwdcf;
-            if (password.value.length == 0) {
-                alert("请输入密码");
-                return false;
-            }
-            if (passwdcf.value.length == 0) {
-                alert("请输入确认密码");
-                return false;
-            }
+            var password = document.getElementById("password");
+            var passwdcf = document.getElementById("passwordcf");
             if (password.value.length < 6) {
                 alert("密码长度至少6位");
                 return false;
             }
-
             if (password.value != passwdcf.value) {
                 alert("密码与确认密码不一致");
                 return false;
@@ -92,11 +85,35 @@
                 $(this).css("background-color","#FFFFCC");
                 var username = document.getElementById("userid").value;
                 //alert("hi");
-                $.get("./test.php", {user: username}, function(msg) {
-                    console.log("msg = " + msg);
-                    alert("msg: " + msg);
+                $.get("./ajaxRequest/checkUsernameUsed.php", {username: username}, function(msg) {
+                    if (msg !== "") {
+                        //alert(msg);
+                        document.getElementById("username_alert").innerHTML = msg;
+                    }
                 });
+            });
 
+            $("#password").change(function() {
+                var password = document.getElementById("password");
+                var pw_alert = document.getElementById("password_alert");
+                if (password.value.length < 6) {
+                    pw_alert.innerHTML = "密码长度至少6位";
+                }
+                else {
+                    pw_alert.innerHTML = "";
+                }
+            });
+
+            $('#passwordcf').change(function() {
+                var passwordcf = document.getElementById("passwordcf");
+                var password = document.getElementById("password");
+                var pwcf_alert = document.getElementById("passwordcf_alert");
+                if (password.value != passwordcf.value) {
+                    pwcf_alert.innerHTML = "密码与确认密码不一致";
+                }
+                else {
+                    pwcf_alert.innerHTML = "";
+                }
             });
         });
 
@@ -104,35 +121,47 @@
 {%/block%}
 
 {%block name="body"%}
-<body onload="javascript:focusOnUsername();" background="../pictures/bg_login.jpg" >
-    <form action="./registerAuth.php" name="registerForm" >
-    <div id="registerFormMain" style="margin-left: 0px;margin-top: 0px">
-        <table style="width:468px;height:262px;background-color: rgba(0, 0, 0, 0.3);text-align: center;color: white">
-            <tr>
-                <th colspan="2" align="center">用户注册</th>
-            </tr>
-            <tr>
-                <td>用户名&nbsp;<input id="userid" type="text" style="width: 200px;height: 30px;"  name="username"></td>
-            </tr>
-            <tr>
-                <td>密  码&nbsp;<input type="password"  style="width: 200px;height: 30px;"  name="password"></td>
-            </tr>
-            <tr>
-                <td>确认密码&nbsp;<input type="password"  style="width: 200px;height: 30px;"  name="passwdcf"></td>
-            </tr>
-            <tr>
-                <td align="center" >
-                    <input formmethod="post" type="submit" style="cursor: pointer;font-style: inherit;" name="submit"  onclick="return checkRegister();" value="注册" > 
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="reset"  style="cursor: pointer;" name=reset  value="重置">
-                </td>
-                <div>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="./login.php">已有账号登录</a>
-                </div>
-            </tr>
-        </table>
-    </div>
-    </form>
-</body>
+<body>
+        <div class="mid-class">
+           <div class="art-right-w3ls">
+              <h2 style="color: rgba(31, 155, 212, 0.911)">用户注册</h2>
+              <form action="./registerAuth.php" method="post" name="registerForm">
+                 <div class="main">
+                    <div class="form-left-to-w3l">
+                        <div style="color: red; font-size: 3mm" id="username_alert"></div>
+                       <input type="text" id="userid" name="username" placeholder="用户名" required="">
+                       </div>
+                    <div class="form-left-to-w3l ">
+                        <div style="color: red; font-size: 3mm" id="password_alert"></div>
+                        <input type="password" id="password" name="password" placeholder="密码" required="">
+                       <div class="clear"></div>
+                    </div>
+                    <div class="form-left-to-w3l ">
+                            <div style="color: red; font-size: 3mm" id="passwordcf_alert"></div>
+                            <input type="password" id="passwordcf" name="passwordcf" placeholder="确认密码" required="">
+                            <div class="clear"></div>
+                         </div>
+                 </div>
+                 <div class="clear"></div>
+                 <div class="btnn">
+                    <button type="submit" onclick="return checkRegister();">注册</button>
+                 </div>
+              </form>
+              <div class="w3layouts_more-buttn">
+                 <h3>已有账号？
+                    <a href="login.php">登录
+                    </a>
+                 </h3>
+              </div>
+           </div>
+           <div class="art-left-w3ls">
+              <h1 class="header-w3ls">
+                Scientific conferences & activities
+              </h1>
+           </div>
+        </div>
+        <footer class="bottem-wthree-footer">
+           <p>Copyright © 2019. Chilly & Tian & Fiona All rights reserved.</p>
+        </footer>
+      </body>
 {%/block%}
