--- a/project/web/html/tpl/layout.html
+++ b/project/web/html/tpl/layout.html
@@ -2,17 +2,13 @@
 <html>
     <head>
         {%block name="css"%}{%/block%}
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="keywords" content="" />
         {%block name="title"%}{%/block%}
     </head>
     
     {%block name="body"%}
-    <body>
-        <iframe src="./html/footer.html"></iframe>
-        <img src="./pictures/1552792416294.jpg">
-        <form type="text" id="xxx"></form>
-        <button action="login.php"> 提交</button>
-    </body>
     {%/block%}
 
     {%block name="javascript"%}
