force smarty to compile every time; ONLY FOR developing

--- a/project/web/html/activityList.html
+++ b/project/web/html/activityList.html
@@ -4,8 +4,9 @@
 
 {%block name="body"%}
 <body>
+    hello
     {%foreach $list as $activity%}
-    <li></li>
+    <li>
         {%foreach $activity as $key=>$value%}
             {%$key%}:&nbsp;{%$value%}&nbsp;
         {%/foreach%}
