--- a/project/web/html/activityList.html
+++ b/project/web/html/activityList.html
@@ -1,16 +1,73 @@
 {%extends file="./tpl/layout.html"%} 
+{%block name="css"%}
+    <link href="../css/login.css" rel="stylesheet" type="text/css" media="all">
+    <link href="../css/link.css" rel="stylesheet" type="text/css" media="all">
 
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/lib/datatable/dataTables.bootstrap.min.css">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
+{%/block%}
 {%block name="title"%}<title>活动列表</title>{%/block%}
+
 
 {%block name="body"%}
 <body>
-    hello
-    {%foreach $list as $activity%}
-    <li>
-        {%foreach $activity as $key=>$value%}
-            {%$key%}:&nbsp;{%$value%}&nbsp;
-        {%/foreach%}
-    </li>
-    {%/foreach%}
+
+    <div id="right-panel" class="right-panel">
+        <div class="content">
+            <div class="animated fadeIn">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <strong class="card-title">Data Table</strong>
+                            </div>
+                            <div class="card-body">
+                                <table id="bootstrap-data-table" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Name</th>
+                                            <th>Abbr</th>
+                                            <th>Begin</th>
+											<th>End</th>
+                                        </tr>
+                                    </thead>
+									<tbody>
+										{%foreach $list as $activity%}
+										<tr>
+											{%foreach $activity as $key=>$value%}
+												<td>{%$value%}</td>
+											{%/foreach%}
+										</tr>
+										{%/foreach%}									
+									</tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div><!-- .animated -->
+        </div><!-- .content -->
+
+
+    </div><!-- /#right-panel -->
+
+    <!-- Right Panel -->
 </body>
+{%/block%}
+
+{%block name="javascript"%}
+
+    <script src="./assets/js/lib/data-table/datatables.min.js"></script>
+    <script src="./assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
+    <script src="./assets/js/init/datatables-init.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+          $('#bootstrap-data-table-export').DataTable();
+      } );
+    </script>
 {%/block%}
