--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -161,7 +161,7 @@
            </div>
         </div>
         <footer class="bottem-wthree-footer">
-           <p>Copyright © 2019. Chilly & Tian & Fiona All rights reserved.</p>
+           <p>Copyright © 2019. Chilly & Tian & Fiona. All rights reserved.</p>
         </footer>
       </body>
 {%/block%}
