--- a/project/web/html/login.html
+++ b/project/web/html/login.html
@@ -20,36 +20,6 @@
 {%/block%}
 
 {%block name="body"%}
-<!--HTML
-<body onload="javascript:focusOnUsername();" background="../pictures/bg_login.jpg" >
-    <form action="./loginAuth.php" name="loginForm" >
-    <div id="loginFormMain" style="margin-left: 0px;margin-top: 0px">
-        <table style="width:468px;height:262px;background-color: rgba(0, 0, 0, 0.3);text-align: center;color: white">
-            <tr>
-                <th colspan="2" align="center">用户登录</th>
-            </tr>
-            <tr>
-                <td>用户名&nbsp;<input type="text" style="width: 200px;height: 30px;"  name="username"></td>
-            </tr>
-            <tr>
-                <td>密  码&nbsp;<input type="password"  style="width: 200px;height: 30px;"  name="password"></td>
-            </tr>
-            <tr>
-                <td align="center" >
-                    <input formmethod="post" type="submit" style="cursor: pointer;font-style: inherit;" name="submit"  onclick="return checkLogin();" value="登录" > 
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="reset"  style="cursor: pointer;" name=reset  value="重置">
-                </td>
-                <div>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="./register.php">注册新账号</a>
-                </div>
-            </tr>
-        </table>
-    </div>
-    </form>
-</body>
--->
 <body>
         <div class="mid-class">
            <div class="art-right-w3ls">
@@ -90,7 +60,7 @@
            </div>
         </div>
         <footer class="bottem-wthree-footer">
-           <p>Copyright © 2019. Chilly & Tian & Fiona All rights reserved.</p>
+           <p>Copyright © 2019. Chilly & Tian & Fiona. All rights reserved.</p>
         </footer>
       </body>
 {%/block%}
