增加一个导航栏

--- a/project/web/html/activityList.html
+++ b/project/web/html/activityList.html
@@ -1,5 +1,5 @@
 {%extends file="./tpl/layout.html"%} 
-{%block name="css"%}
+{%block name="css" append%}
     <link href="css/login.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/link.css" rel="stylesheet" type="text/css" media="all">
 
@@ -11,7 +11,7 @@
 {%block name="title"%}<title>活动列表</title>{%/block%}
 
 
-{%block name="body"%}
+{%block name="body" append%}
 <body>
         <div class="content">
                 <div class="row">
