--- a/project/web/html/tpl/layout.html
+++ b/project/web/html/tpl/layout.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        {%block name="css"%}{%/block%}
+        {%block name="css"%}
+        <link href="css/awwwards.css" rel="stylesheet" type="text/css" media="all">
+        <link href="css/global.css" rel="stylesheet" type="text/css" media="all">
+        {%/block%}
         <meta charset="charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="keywords" content="" />
@@ -9,6 +12,33 @@
     </head>
     
     {%block name="body"%}
+    <body>
+            <section id="splash"  style="height: 40px;">
+
+                    <!-- splash -->
+                    <div class="title-container bg-color" style="color: rgb(0, 0, 0); top: -140px;">
+                        <h1>Charlie Clark Design</h1>
+                        <h2 class="title">charlie clark</h2>
+                        <h3 class="subtitle">interactive developer + designer</h3>
+                        <div id="next-arrow" class="next-arrow ga-track" data-ga-category="splash" data-ga-label="launch_site"><svg height="30" version="1.1" width="30" xmlns="http://www.w3.org/2000/svg" style="overflow: hidden; position: relative; width: 30px; height: 30px;" viewBox="0 0 119 119" preserveAspectRatio="xMinYMin"><desc>Created with Raphaël 2.1.0</desc><defs></defs><path style="" fill="#000000" stroke="none" d="M59.5,0C26.639,0,0,26.639,0,59.5S26.639,119,59.5,119S119,92.361,119,59.5S92.361,0,59.5,0ZM59.5,114C29.4,113.999,5,89.6,5,59.5C5,29.401,29.4,5,59.5,5S114,29.4,114,59.5S89.6,114,59.5,114ZM62,80.649L83,65.54V71L59.692,87.766L36,71V65.54L57,80.649V33H62V80.649Z" stroke-width="3.966666666666667"></path></svg><svg height="30" version="1.1" width="30" xmlns="http://www.w3.org/2000/svg" style="overflow: hidden; position: relative; width: 30px; height: 30px;" viewBox="0 0 119 119" preserveAspectRatio="xMinYMin"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created with Raphaël 2.1.0</desc><defs style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></defs><path fill="#000000" stroke="none" d="M59.5,0C26.639,0,0,26.639,0,59.5S26.639,119,59.5,119S119,92.361,119,59.5S92.361,0,59.5,0ZM59.5,114C29.4,113.999,5,89.6,5,59.5C5,29.401,29.4,5,59.5,5S114,29.4,114,59.5S89.6,114,59.5,114ZM62,80.649L83,65.54V71L59.692,87.766L36,71V65.54L57,80.649V33H62V80.649Z" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" stroke-width="3.966666666666667"></path></svg></div>  
+                    </div>
+        
+                    <!-- header -->
+                    <header id="header" class="bg-color" style="top: 0px; color: rgb(0, 0, 0);">
+                        <ul class="menu">
+                                <a href="login.php"><li class="menu-button home ga-track" data-ga-category="main_nav" data-ga-label="activityList">活动列表</li></a>
+                                <li>•</li>
+                                <a><li class="menu-button work ga-track" data-ga-category="main_nav" data-ga-label="createActivity">创建活动</li></a>
+                                <li>•</li>
+                                <a><li class="menu-button social ga-track" data-ga-category="main_nav" data-ga-label="social">活动管理</li></a>
+                                <li>•</li>
+                                <a><li class="menu-button contact ga-track" data-ga-category="main_nav" data-ga-label="about">about</li></a>
+                        </ul>
+                    </header>
+                    <canvas id="canvas" width="1324" height="839" style="height: 432px; width: 100%; top: 0px; left: 0px; visibility: hidden; opacity: 0;"></canvas>
+                    <div class="bg fg-bg-color" style="background-color: rgb(246, 246, 246);"></div>
+            </section>
+    </body>
     {%/block%}
 
     {%block name="javascript"%}
