增加创建活动界面

--- a/project/web/html/tpl/layout.html
+++ b/project/web/html/tpl/layout.html
@@ -28,7 +28,7 @@
                         <ul class="menu">
                                 <a href="login.php"><li class="menu-button home ga-track" data-ga-category="main_nav" data-ga-label="activityList">活动列表</li></a>
                                 <li>•</li>
-                                <a><li class="menu-button work ga-track" data-ga-category="main_nav" data-ga-label="createActivity">创建活动</li></a>
+                                <a href="addActivity.php"><li class="menu-button work ga-track" data-ga-category="main_nav" data-ga-label="createActivity">创建活动</li></a>
                                 <li>•</li>
                                 <a><li class="menu-button social ga-track" data-ga-category="main_nav" data-ga-label="social">活动管理</li></a>
                                 <li>•</li>
