--- a/project/web/html/login.html
+++ b/project/web/html/login.html
@@ -39,7 +39,7 @@
                     <span class="remenber-me">记住密码 </span>
                  </div>
                  <div class="right-side-forget">
-                    <a href="#" class="for">忘记密码?</a>
+                    <a class="login" href="#" class="for">忘记密码?</a>
                  </div>
                  <div class="clear"></div>
                  <div class="btnn">
@@ -48,7 +48,7 @@
               </form>
               <div class="w3layouts_more-buttn">
                  <h3>还没有账号？
-                    <a href="register.php">注册
+                    <a class="login" href="register.php">注册
                     </a>
                  </h3>
               </div>
