--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -149,7 +149,7 @@
               </form>
               <div class="w3layouts_more-buttn">
                  <h3>已有账号？
-                    <a href="login.php">登录
+                    <a  class="login" href="login.php">登录
                     </a>
                  </h3>
               </div>
