根据用户的role，添加了删除/退出操作

--- a/project/web/html/activityList.html
+++ b/project/web/html/activityList.html
@@ -36,10 +36,13 @@
 									<tbody>
 										{%foreach $list as $activity%}
                                         <tr>
-											{%foreach $activity as $key=>$value%}
-                                            <td>{%$value%}</td>
-                                            {%/foreach%}
-                                            <td>
+                        
+                                            <td>{%$activity.id%}</td>
+                                            <td>{%$activity.name%}</td>
+                                            <td>{%$activity.abbr%}</td>
+                                            <td>{%$activity.begin_date%}</td>
+                                            <td>{%$activity.end_date%}</td>
+                                        <td>
                                                 <a href="">Details</a>
                                             </td>
 										</tr>
