修改了一下文件结构，把不会直接显示在地址栏内的php文件放到了web/php文件夹下

--- a/project/web/html/addActivity.html
+++ b/project/web/html/addActivity.html
@@ -39,7 +39,7 @@
 				<div class="mid-class">
 					 <div class="art-right-w3ls">
 							<h2 style="color: rgba(31, 155, 212, 0.911)">创建活动</h2>
-							<form action="./addActivityAuth.php" method="post" name="registerForm">
+							<form action="php/activities/addActivityAuth.php" method="post" name="registerForm">
 								 <div class="main">
 										<div class="form-left-to-w3l">
 											 <input type="text" id="name" name="name" placeholder="会议名称" required="">
