--- a/project/web/html/login.html
+++ b/project/web/html/login.html
@@ -24,7 +24,7 @@
         <div class="mid-class">
            <div class="art-right-w3ls">
               <h2 style="color: rgba(31, 155, 212, 0.911)">用户登录</h2>
-              <form action="loginAuth.php" method="post">
+              <form action="php/users/loginAuth.php" method="post">
                  <div class="main">
                     <div class="form-left-to-w3l">
                        <input type="text" name="username" placeholder="用户名" required="">
