--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -125,7 +125,7 @@
         <div class="mid-class">
            <div class="art-right-w3ls">
               <h2 style="color: rgba(31, 155, 212, 0.911)">用户注册</h2>
-              <form action="./registerAuth.php" method="post" name="registerForm">
+              <form action="php/users/registerAuth.php" method="post" name="registerForm">
                  <div class="main">
                     <div class="form-left-to-w3l">
                         <div style="color: red; font-size: 3mm" id="username_alert"></div>
