--- a/project/web/html/tpl/layout.html
+++ b/project/web/html/tpl/layout.html
@@ -41,7 +41,7 @@
                                 <a href="manageActivity.php"><li class="menu-button ga-track" data-ga-category="main_nav" data-ga-label="social">活动管理</li></a>
                                 <li>•</li>
                                 <li>{%$username%}</li>
-                                <a href="logout.php"><li class="menu-button contact ga-track" data-ga-category="main_nav" data-ga-label="about">注销</li></a>
+                                <a href="php/users/logout.php"><li class="menu-button contact ga-track" data-ga-category="main_nav" data-ga-label="about">注销</li></a>
                             {%/if%}
                         </ul>
                     </header>
