--- a/project/web/html/activityList.html
+++ b/project/web/html/activityList.html
@@ -42,7 +42,7 @@
                                             <td>{%$activity.begin_date%}</td>
                                             <td>{%$activity.end_date%}</td>
                                             <td>
-                                                <a href="">查看</a>
+                                                <a href="javascript:check_activity_information({%$activity.id%})">查看</a>
                                                 <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
                                                 {%if $role == 1%}
                                                 <a href="">管理</a>
@@ -67,6 +67,10 @@
 
 {%block name="javascript"%}
     <script type="text/javascript">
+        function check_activity_information(activity_id){
+            window.location.href = "php/activities/viewActivity.php?activity_id=" + activity_id;
+        }
+
         function delete_activity(activity_id) {
             if (confirm("确认删除？")) {
                 window.location.href = "php/activities/deleteActivity.php?activity_id=" + activity_id;
