--- a/project/web/html/addActivity.html
+++ b/project/web/html/addActivity.html
@@ -42,21 +42,21 @@
 							<form action="php/activities/addActivityAuth.php" method="post" name="registerForm">
 								 <div class="main">
 										<div class="form-left-to-w3l">
-											 <input type="text" id="name" name="name" placeholder="会议名称" required="">
+											 <input type="text" id="name" name="name" placeholder="会议名称" autocomplete="off"required="">
 										</div>
 										<div class="form-left-to-w3l ">
-												<input type="text" id="abbr" name="abbr" placeholder="会议简称" required="">	
+												<input type="text" id="abbr" name="abbr" placeholder="会议简称" autocomplete="off" required="">	
 												<div class="clear"></div>		
 										</div>
 										<div class="form-group">
 											<div class="form-left-to-w3l ">
-													<input type="text" id="begin_date" name="begin_date" class="form-control" placeholder="开始时间" autocomplete="on" required="">	
+													<input type="text" id="begin_date" name="begin_date" class="form-control" placeholder="开始时间" autocomplete="off" required="">	
 													<div class="clear"></div>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="form-left-to-w3l ">
-													<input type="text" id="end_date" name="end_date" class="form-control" placeholder="结束时间" autocomplete="on" required="">	
+													<input type="text" id="end_date" name="end_date" class="form-control" placeholder="结束时间" autocomplete="off" required="">	
 													<div class="clear"></div>
 											</div>
 										</div>
