所有html文件的href和src属性涉及的路径全部改为相对根目录的相对路径; 修正了一些文件的位置

--- a/project/web/html/login.html
+++ b/project/web/html/login.html
@@ -1,7 +1,7 @@
 {%extends file="./tpl/layout.html"%} 
 {%block name="css"%}
-    <link href="../css/login.css" rel='stylesheet' type='text/css' media="all">
-    <link href="../css/link.css" rel='stylesheet' type='text/css' media="all">
+    <link href="/css/login.css" rel='stylesheet' type='text/css' media="all">
+    <link href="/css/link.css" rel='stylesheet' type='text/css' media="all">
 {%/block%}
     
 {%block name="title"%}<title>用户登录界面</title>{%/block%}
@@ -48,7 +48,7 @@
               </form>
               <div class="w3layouts_more-buttn">
                  <h3>还没有账号？
-                    <a class="login" href="register.php">注册
+                    <a class="login" href="/register.php">注册
                     </a>
                  </h3>
               </div>
