--- a/project/web/html/manageActivityManager.html
+++ b/project/web/html/manageActivityManager.html
@@ -1,12 +1,12 @@
 {%extends file="./tpl/layout.html"%} 
 {%block name="css" append%}
-    <link href="css/login.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/link.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/login.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/link.css" rel="stylesheet" type="text/css" media="all">
 
-	<link rel="stylesheet" href="html/assets/css/bootstrap.min.css" type="text/css" media="all">
-    <link rel="stylesheet" href="html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
+	<link rel="stylesheet" href="/html/assets/css/bootstrap.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
 
-    <link rel="stylesheet" href="html/assets/css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/html/assets/css/style.css" type="text/css" media="all">
 {%/block%}
 {%block name="title"%}<title>活动列表</title>{%/block%}
 
@@ -70,13 +70,13 @@
 {%block name="javascript"%}
     <script type="text/javascript">
         function manage_activity_manager(activity_id){
-            window.location.href = "./infoManager.php?activity_id=" + activity_id;
+            window.location.href = "/php/infoManager.php?activity_id=" + activity_id;
         }
     </script>
 
-    <script src="html/assets/js/lib/data-table/datatables.min.js"></script>
-    <script src="html/assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
-    <script src="html/assets/js/init/datatables-init.js"></script>
+    <script src="/html/assets/js/lib/data-table/datatables.min.js"></script>
+    <script src="/html/assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
+    <script src="/html/assets/js/init/datatables-init.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
