--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -1,13 +1,13 @@
 {%extends file="./tpl/layout.html"%} 
 {%block name="css"%}
-    <link href="../css/login.css" rel="stylesheet" type="text/css" />
-    <link href="../css/link.css" rel="stylesheet" type="text/css" />
+    <link href="/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="/css/link.css" rel="stylesheet" type="text/css" />
 {%/block%}
     
 {%block name="title"%}<title>用户注册界面</title>{%/block%}
     
 {%block name="javascript"%}
-    <script type="text/javascript" src="../jquery/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/jquery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
         /**
         //窗体改变大小时触发事件
@@ -148,7 +148,7 @@
               </form>
               <div class="w3layouts_more-buttn">
                  <h3>已有账号？
-                    <a  class="login" href="login.php">登录
+                    <a  class="login" href="/login.php">登录
                     </a>
                  </h3>
               </div>
