--- a/project/web/html/addActivity.html
+++ b/project/web/html/addActivity.html
@@ -1,20 +1,20 @@
 {%extends file="./tpl/layout.html"%} 
 {%block name="css" append%}
-	<link href="css/login.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/link.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/login.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/link.css" rel="stylesheet" type="text/css" media="all">
 
-	<link rel="stylesheet" href="html/assets/css/bootstrap.min.css" type="text/css" media="all">
-    <link rel="stylesheet" href="html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
+	<link rel="stylesheet" href="/html/assets/css/bootstrap.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
 
-    <link rel="stylesheet" href="html/assets/css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/html/assets/css/style.css" type="text/css" media="all">
 
 {%/block%}
 	
 {%block name="title"%}<title>创建活动界面</title>{%/block%}
 
 {%block name="javascript"%}
-	<script type="text/javascript" src="../jquery/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="html/assets/js/bootstrap.min.js"></script> 
+	<script type="text/javascript" src="/jquery/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/html/assets/js/bootstrap.min.js"></script> 
 	
 	<script src="html/assets/js/bootstrap-datepicker.min.js"></script>
 
@@ -69,7 +69,7 @@
 							</form>
 							<div class="w3layouts_more-buttn">
 								 <h3>
-										<a href="index.php">查看已有活动
+										<a href="/index.php">查看已有活动
 										</a>
 								 </h3>
 							</div>
