--- a/project/web/html/manageActivity.html
+++ b/project/web/html/manageActivity.html
@@ -1,12 +1,12 @@
 {%extends file="./tpl/layout.html"%} 
 {%block name="css" append%}
-    <link href="css/login.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/link.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/login.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/link.css" rel="stylesheet" type="text/css" media="all">
 
-	<link rel="stylesheet" href="html/assets/css/bootstrap.min.css" type="text/css" media="all">
-    <link rel="stylesheet" href="html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
+	<link rel="stylesheet" href="/html/assets/css/bootstrap.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
 
-    <link rel="stylesheet" href="html/assets/css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/html/assets/css/style.css" type="text/css" media="all">
 {%/block%}
 {%block name="title"%}<title>活动管理</title>{%/block%}
 
@@ -22,7 +22,7 @@
                                 <strong class="card-title">Data Table</strong>
                                 {%if $role === 1%}
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
-                                    <a href="manageActivityManager.php">管理员入口</a>
+                                    <a href="/php/manageActivityManager.php">管理员入口</a>
                                 {%/if%}
                             </div>
                             <div class="card-body">
@@ -72,29 +72,29 @@
 {%block name="javascript"%}
     <script type="text/javascript">
         function check_activity_information(activity_id){
-            window.location.href = "viewActivity.php?activity_id=" + activity_id;
+            window.location.href = "/php/activities/viewActivity.php?activity_id=" + activity_id;
         }
 
         function delete_activity(activity_id) {
             if (confirm("确认删除？")) {
-                window.location.href = "php/activities/deleteActivity.php?activity_id=" + activity_id;
+                window.location.href = "/php/activities/deleteActivity.php?activity_id=" + activity_id;
             }
         }
 
         function delete_record(activity_id, user_id) {
             if (confirm("确认退出？")) {
-                window.location.href = "php/user_activity/deleteRecord.php?activity_id=" + activity_id + "&user_id=" + user_id; 
+                window.location.href = "/php/user_activity/deleteRecord.php?activity_id=" + activity_id + "&user_id=" + user_id; 
             }
         }
 
         function admin_manage_activity(activity_id){
-            //window.location.href = "php/activities/viewActivity.php?activity_id=" + activity_id;
+            //window.location.href = "/php/activities/viewActivity.php?activity_id=" + activity_id;
         }
     </script>
 
-    <script src="html/assets/js/lib/data-table/datatables.min.js"></script>
-    <script src="html/assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
-    <script src="html/assets/js/init/datatables-init.js"></script>
+    <script src="/html/assets/js/lib/data-table/datatables.min.js"></script>
+    <script src="/html/assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
+    <script src="/html/assets/js/init/datatables-init.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
