--- a/project/web/html/infoManager.html
+++ b/project/web/html/infoManager.html
@@ -21,15 +21,16 @@
 <body>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-1 sidebar">
-            <ul class="nav nav-sidebar" style="line-height:60px">
-             <li class="active"><a href="">信息修改</a></li>
-             <li class=""><a href="javascript:attendent_manage({%$activity_id%})">用户管理</a></li>
-             <li class=""><a href="">信息导出</a></li>
-             <li class=""><a href="">详细日程</a></li>
+          <div style="position: absolute; margin-top:0px;">
+            <div class="col-md-3 sidebar">
+              <ul class="nav nav-sidebar" style="line-height:60px">
+                <li class="active"><a href="">信息修改</a></li>
+                <li class=""><a href="javascript:attendent_manage({%$activity_id%})">用户管理</a></li>
+                <li class=""><a href="">信息导出</a></li>
+                <li class=""><a href="">详细日程</a></li>
              <!--后两个功能只做占位符用 可以再定-->
-            </ul>
-          </div>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
