fix a bug in attendentManager.html

--- a/project/web/html/attendentManager.html
+++ b/project/web/html/attendentManager.html
@@ -25,7 +25,7 @@
            <div style="position: absolute; margin-top:0px;">
           <div class="col-md-3 sidebar">
             <ul class="nav nav-sidebar" style="line-height:60px">
-             <li class=""><a href="javascript:info_manage({%$activity.id%})">信息修改</a></li>
+             <li class=""><a href="javascript:info_manage({%$activity_id%})">信息修改</a></li>
              <li class="active"><a href="">用户管理</a></li>
              <li class=""><a href="">信息导出</a></li>
              <li class=""><a href="">详细日程</a></li>
